# s3-finder

./: Cargo.toml  README.md  TODO.md  index.html  styles.css
src/: app.rs  main.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: file_icon.rs  mod.rs
src/services/: file_service.rs
src/utils/: format.rs  mod.rs  tauri.rs
